<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_background"
    tools:context=".AddTask">

    <TextView
        android:id="@+id/newtask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="108dp"
        android:text="@string/newtask"
        android:textColor="#3700B3"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.318"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/create_task"
        android:layout_width="265dp"
        android:layout_height="45dp"
        android:layout_marginTop="96dp"
        android:ems="10"
        android:hint="@string/create_task"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.684"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newtask" />

    <EditText
        android:id="@+id/create_description"
        android:layout_width="271dp"
        android:layout_height="95dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/create_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_task" />

    <Button
        android:id="@+id/add_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="99dp"
        android:background="@drawable/custom_button"
        android:text="@string/add_task"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_description"
        app:layout_constraintVertical_bias="0.504" />
</androidx.constraintlayout.widget.ConstraintLayout>