<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_background"
    tools:context=".EditTask">

    <TextView
        android:id="@+id/edit_your_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="80dp"
        android:text="@string/edit_your_task"
        android:textSize="30sp"
        android:textColor="#3700B3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.391"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_task"
        android:layout_width="265dp"
        android:layout_height="45dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:hint="@string/edit_task"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.582"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_your_task" />

    <EditText
        android:id="@+id/edit_description"
        android:layout_width="271dp"
        android:layout_height="95dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/edit_description"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.564"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_task" />

    <Button
        android:id="@+id/update_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="99dp"
        android:text="@string/update_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.411"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_description"
        app:layout_constraintVertical_bias="1.0"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:textColor="#000000"
        android:background="@drawable/custom_button"/>
</androidx.constraintlayout.widget.ConstraintLayout>